add support for v210 card -- additional modifications

--- a/OVERVIEW.html
+++ b/OVERVIEW.html
@@ -30,6 +30,7 @@ img { max-width: 100%; }
 <li>V450 Analog Input and Thermocouple Measurement module</li>
 <li>V470 Analog Output and Thermocouple Simulator module</li>
 <li>V545 Synchro/Resolver/LVDT/RVDT Simulation/Acquisition module</li>
+<li>V210 Relay module.</li>
 </ol>
 <p>Support for additional boards will be provided upon request.</p>
 <p>For more details, see the README.</p>
